@@ -5,7 +5,7 @@ use warnings;
 use base 'Module::Build';
 
 use lib "inc";
-use My::Utility qw(find_SDL_dir find_file sed_inplace);
+use My::Utility qw(find_SDL_dir find_file sed_inplace get_dlext);
 use File::Spec::Functions qw(catdir catfile splitpath catpath rel2abs abs2rel);
 use File::Path qw(make_path remove_tree);
 use File::Copy qw(cp);
@@ -237,20 +237,21 @@ sub set_config_data {
     }
   }
 
+  my $dlext = get_dlext();
   # find ld_shared_libs and create symlinks if necessary
   my $symlink_exists = eval { symlink("",""); 1 };
   if($symlink_exists)
   {
-    my @shlibs_ = find_file($build_out, qr/\.\Q$Config{dlext}\E[\d\.]+$/);
+    my @shlibs_ = find_file($build_out, qr/\.$dlext[\d\.]+$/);
     foreach my $full (@shlibs_){
-      $full =~ qr/(.*\.\Q$Config{dlext}\E)[\d\.]+$/;
+      $full =~ qr/(.*\.$dlext)[\d\.]+$/;
       my ($v, $d, $f) = splitpath($full);
       symlink("./$f", $1) unless -e $1;
     }
   }
 
   # find and set ld_shared_libs
-  my @shlibs = find_file($build_out, qr/\.\Q$Config{dlext}\E$/);
+  my @shlibs = find_file($build_out, qr/\.$dlext$/);
   my $p = rel2abs($prefix);
   $_ =~ s/^\Q$prefix\E/\@PrEfIx\@/ foreach (@shlibs);
   $cfg->{ld_shared_libs} = [ @shlibs ];
