@@ -2,6 +2,7 @@ Revision history for Perl module Alien::SDL
 
 1.405  TBD
      - removes old share dirs installs of Alien [kthakore]
+     - searching for .dylib's, .so's and .bundle's on mac [FROGGS]
 
 1.404  Thu May 13 2010
      - added new binaries for Win64 with fb/pango patch [kmx]
